feat: 학과별 정보 수정