@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.business;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.TECH_BUSI)
+import static com.kustacks.kuring.notice.domain.DepartmentName.TECH_BUSI;
+
+@RegisterDepartmentMap(key = TECH_BUSI)
 public class TechnologicalBusinessDept extends BusinessCollege {
 
     public TechnologicalBusinessDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class TechnologicalBusinessDept extends BusinessCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("3511696");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("1168");
-        List<String> menuSeqs = List.of("8081");
-
+        List<String> professorForumIds = List.of("10526");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "MOT", boardSeqs, menuSeqs);
-        this.code = "121174";
-        this.departmentName = DepartmentName.TECH_BUSI;
+        this.noticeScrapInfo = new NoticeScrapInfo(TECH_BUSI.getHostPrefix(), 445);
+        this.departmentName = TECH_BUSI;
     }
 }
