@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.education;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.EDUCATION)
+import static com.kustacks.kuring.notice.domain.DepartmentName.EDUCATION;
+
+@RegisterDepartmentMap(key = EDUCATION)
 public class EducationDept extends EducationCollege {
 
     public EducationDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class EducationDept extends EducationCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("6238");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("452");
-        List<String> menuSeqs = List.of("3147");
-
+        List<String> professorForumIds = List.of("11444");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "GYOJIK", boardSeqs, menuSeqs);
-        this.code = "105041";
-        this.departmentName = DepartmentName.EDUCATION;
+        this.noticeScrapInfo = new NoticeScrapInfo(EDUCATION.getHostPrefix(), 507);
+        this.departmentName = EDUCATION;
     }
 }
