@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.ku_integrated_science;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.BIO_MEDICAL)
+import static com.kustacks.kuring.notice.domain.DepartmentName.BIO_MEDICAL;
+
+@RegisterDepartmentMap(key = BIO_MEDICAL)
 public class BioMedicalScienceDept extends KuIntegratedScienceCollege {
 
     public BioMedicalScienceDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class BioMedicalScienceDept extends KuIntegratedScienceCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("15602966");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("291");
-        List<String> menuSeqs = List.of("2199");
-
+        List<String> professorForumIds = List.of("10770");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "BMSE", boardSeqs, menuSeqs);
-        this.code = "126918";
-        this.departmentName = DepartmentName.BIO_MEDICAL;
+        this.noticeScrapInfo = new NoticeScrapInfo(BIO_MEDICAL.getHostPrefix(), 880);
+        this.departmentName = BIO_MEDICAL;
     }
 }
