@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.ku_integrated_science;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.INT_BIO_TECH)
+import static com.kustacks.kuring.notice.domain.DepartmentName.INT_BIO_TECH;
+
+@RegisterDepartmentMap(key = INT_BIO_TECH)
 public class IntergrativeBioscienceBiotechnologyDept extends KuIntegratedScienceCollege {
 
     public IntergrativeBioscienceBiotechnologyDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class IntergrativeBioscienceBiotechnologyDept extends KuIntegratedScience
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("14570494");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("1154");
-        List<String> menuSeqs = List.of("8002");
-
+        List<String> professorForumIds = List.of("10837");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "IBB", boardSeqs, menuSeqs);
-        this.code = "126920";
-        this.departmentName = DepartmentName.INT_BIO_TECH;
+        this.noticeScrapInfo = new NoticeScrapInfo(INT_BIO_TECH.getHostPrefix(), 895);
+        this.departmentName = INT_BIO_TECH;
     }
 }
