@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.liberal_art;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.CULTURE_CONT)
+import static com.kustacks.kuring.notice.domain.DepartmentName.CULTURE_CONT;
+
+@RegisterDepartmentMap(key = CULTURE_CONT)
 public class CultureContentDept extends LiberalArtCollege {
 
     public CultureContentDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class CultureContentDept extends LiberalArtCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("89388", "3934522", "14064096");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("1060");
-        List<String> menuSeqs = List.of("7489");
-
+        List<String> professorForumIds = List.of("8001");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "CULTURECONTENTS", boardSeqs, menuSeqs);
-        this.code = "121259";
-        this.departmentName = DepartmentName.CULTURE_CONT;
+        this.noticeScrapInfo = new NoticeScrapInfo(CULTURE_CONT.getHostPrefix(), 661);
+        this.departmentName = CULTURE_CONT;
     }
 }
