@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.liberal_art;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.ENGLISH)
+import static com.kustacks.kuring.notice.domain.DepartmentName.ENGLISH;
+
+@RegisterDepartmentMap(key = ENGLISH)
 public class EnglishDept extends LiberalArtCollege {
 
     public EnglishDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class EnglishDept extends LiberalArtCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("7603");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("590");
-        List<String> menuSeqs = List.of("4595");
-
+        List<String> professorForumIds = List.of("3886");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "ENGLISH", boardSeqs, menuSeqs);
-        this.code = "121254";
-        this.departmentName = DepartmentName.ENGLISH;
+        this.noticeScrapInfo = new NoticeScrapInfo(ENGLISH.getHostPrefix(), 347);
+        this.departmentName = ENGLISH;
     }
 }
