@@ -1,19 +1,19 @@
 package com.kustacks.kuring.worker.scrap.deptinfo.liberal_art;
 
-import com.kustacks.kuring.notice.domain.DepartmentName;
-import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
+import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.client.notice.NoticeApiClient;
+import com.kustacks.kuring.worker.scrap.client.notice.property.LatestPageNoticeProperties;
 import com.kustacks.kuring.worker.scrap.deptinfo.DeptInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.NoticeScrapInfo;
 import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
-import com.kustacks.kuring.worker.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParserTemplate;
 
-import java.util.Collections;
 import java.util.List;
 
-@RegisterDepartmentMap(key = DepartmentName.KOREAN)
+import static com.kustacks.kuring.notice.domain.DepartmentName.KOREAN;
+
+@RegisterDepartmentMap(key = KOREAN)
 public class KoreanDept extends LiberalArtCollege {
 
     public KoreanDept(NoticeApiClient<ScrapingResultDto, DeptInfo> latestPageNoticeApiClient,
@@ -23,14 +23,9 @@ public class KoreanDept extends LiberalArtCollege {
         this.htmlParser = latestPageNoticeHtmlParser;
         this.latestPageNoticeProperties = latestPageNoticeProperties;
 
-        List<String> professorForumIds = List.of("31204");
-        List<String> forumIds = Collections.emptyList();
-        List<String> boardSeqs = List.of("506");
-        List<String> menuSeqs = List.of("3681");
-
+        List<String> professorForumIds = List.of("3815");
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
-        this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "KOREA", boardSeqs, menuSeqs);
-        this.code = "121253";
-        this.departmentName = DepartmentName.KOREAN;
+        this.noticeScrapInfo = new NoticeScrapInfo(KOREAN.getHostPrefix(), 334);
+        this.departmentName = KOREAN;
     }
 }
